--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             const shareTitle = '나의 개발자 유형은 무엇일까? 나의 개발자 유형을 확인해보고 공유해보자!!';
             const shareDes=infoList[resultAlt].name;
             
-            const shareImage= 'html주소 입력' + 'img/title_img.png';
-            const shareURL = 'html주소 입력';
+            const shareImage= 'https://curious-maamoul-c99a29.netlify.app/' + 'img\title_img.png';
+            const shareURL = 'https://curious-maamoul-c99a29.netlify.app/';
             Kakao.Link.sendDefault({
                 objectType: 'feed',
                 content: {
