--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>개발자 유형 테스트</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script>
-        Kakao.init('8850362fc9d0fac45db4c0fbeefb5181');
+        Kakao.init('코드입력');
         Kakao.isInitialized();
         </script>
 </head>
